<?xml version="1.0"?>
<package format="2">
  <name>icra19_suture_rtt</name>
  <version>0.0.0</version>
  <description>The icra19_suture_rtt package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hsaeidi@todo.todo">hsaeidi</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/icra19_suture_rtt</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cautery_description</build_depend>
  <build_depend>cautery_rtt</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>endo360_description</build_depend>
  <build_depend>endo360_rtt</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>iiwa_descritption</build_depend>
  <build_depend>iiwa_hw</build_depend>
  <build_depend>iiwa_msgs</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_ros_msgs</build_depend>
  <build_depend>rtt_rosdeployment</build_depend>
  <build_depend>rtt_rosnode</build_depend>
  <build_depend>rtt_rosparam</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>star_rtt</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>uta_description</build_depend>
  <build_depend>uta_rtt</build_depend>
  <build_export_depend>cautery_description</build_export_depend>
  <build_export_depend>cautery_rtt</build_export_depend>
  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>endo360_description</build_export_depend>
  <build_export_depend>endo360_rtt</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>iiwa_descritption</build_export_depend>
  <build_export_depend>iiwa_hw</build_export_depend>
  <build_export_depend>iiwa_msgs</build_export_depend>
  <build_export_depend>kdl_conversions</build_export_depend>
  <build_export_depend>kdl_parser</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rtt_ros</build_export_depend>
  <build_export_depend>rtt_ros_msgs</build_export_depend>
  <build_export_depend>rtt_rosdeployment</build_export_depend>
  <build_export_depend>rtt_rosnode</build_export_depend>
  <build_export_depend>rtt_rosparam</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>star_rtt</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>uta_description</build_export_depend>
  <build_export_depend>uta_rtt</build_export_depend>
  <exec_depend>cautery_description</exec_depend>
  <exec_depend>cautery_rtt</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>endo360_description</exec_depend>
  <exec_depend>endo360_rtt</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>iiwa_descritption</exec_depend>
  <exec_depend>iiwa_hw</exec_depend>
  <exec_depend>iiwa_msgs</exec_depend>
  <exec_depend>kdl_conversions</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rtt_ros</exec_depend>
  <exec_depend>rtt_ros_msgs</exec_depend>
  <exec_depend>rtt_rosdeployment</exec_depend>
  <exec_depend>rtt_rosnode</exec_depend>
  <exec_depend>rtt_rosparam</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>star_rtt</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>uta_description</exec_depend>
  <exec_depend>uta_rtt</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
